--- a/index.html
+++ b/index.html
@@ -3,35 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="pop">
-        <div class="item one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi earum, quos adipisci repellat quo eaque accusamus praesentium qui assumenda provident autem quibusdam quasi quod eius perferendis ducimus. Dolore, vel voluptates?
-        Minima incidunt accusamus deserunt quia exercitationem saepe, consequuntur quasi. Libero, facilis nisi voluptate, officia illo, eum quis est minima nostrum laudantium delectus. Ad aliquid molestias fugit, esse quidem voluptate nihil.
-        Labore dolor amet pariatur, eveniet deserunt sunt asperiores deleniti. Quaerat eum a mollitia nobis possimus natus dolorum beatae, ex tempora explicabo reprehenderit hic eius culpa maiores accusamus? Consequatur, eaque repudiandae?
-        Iure itaque, omnis labore neque dicta autem dolorum cumque, facere excepturi nihil quaerat est deserunt quas voluptates. Et est vel error consequuntur, rerum, explicabo, inventore illo nihil distinctio debitis quo?
-        Voluptas blanditiis eos, ab perferendis ipsa enim quae, dolor molestias excepturi, totam deleniti dicta ut officia repudiandae sint cumque. Nemo quibusdam repudiandae officia iusto maiores consectetur sit minima recusandae vel!
-        Nesciunt earum dicta quod eos totam qui fugiat repudiandae dolorem laborum animi. Rem libero, quasi voluptatum nam a odio ea sed quibusdam ipsum sunt perferendis nesciunt adipisci. Nesciunt, reprehenderit pariatur.
-        Fugit, maxime minima! Non animi neque consectetur amet quidem a ex, natus itaque tenetur doloribus ratione accusamus suscipit delectus hic, vel deleniti, velit ea! Voluptatibus ducimus sed saepe nulla repellat.
-        Veniam illo culpa dignissimos quibusdam alias corporis ducimus nesciunt est! Eligendi quaerat quisquam amet sunt distinctio molestias est possimus dolor dolore quibusdam ipsam ipsa, accusamus necessitatibus, non, eveniet a laborum!
-        Mollitia doloremque aperiam molestias iste numquam ratione ab necessitatibus sint veniam asperiores quam quis fuga recusandae soluta maxime quaerat fugiat cumque quo harum, dolores aliquam in rerum velit. Vel, doloribus!
-        Nobis enim necessitatibus ratione. Sint ad voluptas aut expedita odio itaque earum nihil fuga velit vero quisquam magnam hic, accusamus saepe maiores porro culpa? Modi corporis molestiae numquam reiciendis optio.</div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+    <div class="container">
+        <form class="signup-form">
+            <h2>Sign Up</h2>
+            <input type="text" placeholder="Name" required>
+            <input type="text" placeholder="Username" required>
+            <input type="email" placeholder="Email" required>
+            <input type="password" placeholder="Password" required>
+            <input type="password" placeholder="Confirm password" required>
+            <button type="submit">Sign Up</button>
+        </form>
     </div>
-    <meter style="height: 40px;" value="50" max="100"></meter> </progress>
-    <br>
-    <progress value="60" max="100"></progress>
-
-    <button type="button" class="btn btn-primary btn-sm">Small button</button>
-<button type="button" class="btn btn-secondary btn-sm">Small button</button>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
